--- a/CSS/Positioning/style.css
+++ b/CSS/Positioning/style.css
@@ -50,7 +50,27 @@ img {
 .xD {
   box-sizing: border-box;
   height: 200px;
-  float: left;
+  position: relative;
   width: 20%;
   border: 5px dotted blue;
+}
+
+.qwe {
+  width: 200px;
+  height: 200px;
+  background-color: yellow;
+  margin: 20px auto;
+  position: relative;
+  border: none;
+}
+
+.child {
+  width: 50px;
+  height: 50px;
+  background-color: blue;
+  position: absolute;
+  border: none;
+  bottom: 150px;
+  right: 0;
+  bottom: 0;
 }
